# Ambient-Keyboard-Lighting

./: .editorconfig  .gitattributes  .gitignore  CONDUCT.MD  Cargo.toml  LICENSE.TXT  README.MD
application/: .gitattributes  .gitignore  Cargo.toml
application/src/: main.rs  utils.rs
arch-linux/: PKGBUILD  calc-depends.sh
configuration/apparmor/: get-capabilities.sh  usr.bin.ambient-kb
packaging/: .gitignore
packaging/apparmor/: usr.bin.ambient-kb
packaging/arch-linux/: PKGBUILD
packaging/opensuse/: _service  ambient-kb.spec  vendor.toml
packaging/systemd/: ambient-kb.service
src/: main.rs
