[package]
name = "ambient-kb"
version = "1.4.1"
license = "LAGPL3"
authors = ["Miles B Huff <MilesBHuff@Users.NoReply.Github.com>"]
description = "Calculates the average color of the display, and sets the keyboard to that color."
edition = "2018"

[dependencies]
libc = "0.2"
scrap = "0.5"
structopt = "0.3"

[profile.dev]
debug = true
debug-assertions = true
incremental = true
lto = "thin"
opt-level = 1
overflow-checks = true
panic = "unwind"
#strip = "none"

[profile.dev.build-override]
opt-level = 1

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = true
lto = "fat"
opt-level = 3
overflow-checks = true
panic = "abort"
#strip = "symbols"

[profile.release.build-override]
codegen-units = 1
opt-level = 3
